# MathSolver

./: Cargo.toml
src/: Expressions.odin  Main.odin  Solving.odin  equation.rs  eval.rs  lexer.rs  lib.rs  location.rs  parser.rs  parsing.rs  simplify.rs  token.rs
